--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -196,7 +196,7 @@
                                         <div class="form-group col-md-6">
                                             <label class="title">Priode Anggaran:</label>
                                             <select class="form-control select2" name="PeriodeAnggaran" style="width: 100%;">
-                                                <option selected disabled>--Pilih--</option>
+                                                <!--<option selected disabled>TA-2017</option>-->
                                             </select>
                                         </div>
                                         <div class="form-group col-md-6">
