--- a/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
@@ -232,7 +232,7 @@
                                         <div class="col-md-12">
                                             <label>
                                                 <!--<a id="addVendorItem">Tambah</a>-->
-                                                <a onclick="TambahProyekDrafPembayaran()" id="" style="margin-top:10px;margin-bottom:10px" class="btn btn-sm btn-social btn-bitbucket">
+                                                <a onclick="popuptahapanpembayaran()" id="" style="margin-top:10px;margin-bottom:10px" class="btn btn-sm btn-social btn-bitbucket">
                                                     <i class="fa fa-plus"></i>
                                                     Tambah Tahapan Pembayaran
                                                 </a>
@@ -251,7 +251,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <!--<div class="row">
                                         <div class="col-md-12">
                                             <div class=" panel-header-white">
                                                 <span class="title-header" id="section-7">Personil</span>
@@ -259,7 +259,6 @@
                                         </div>
                                         <div class="col-md-12">
                                             <label>
-                                                <!--<a id="addPerson-pic" class="addPerson" attr1=".listperson-pic" >Tambah PIC</a>-->
                                                 <a id="addPerson-pic" attr1=".listperson-pic" style="margin-top:10px;margin-bottom:10px" class="addPerson btn btn-sm btn-social btn-bitbucket">
                                                     <i class="fa fa-plus"></i>
                                                     Tambah PIC
@@ -269,7 +268,7 @@
                                             <div class="listperson-pic">
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>-->
 
                                     <div class="box-footer clearfix" style="text-align:center;">
                                         <button class="pull-middle btn btn-primary btn-lmedia SimpanAjukan" style="display:none">Simpan & Ajukan <i class="fa fa-save"></i></button>
