--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -642,7 +642,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
-                                                                                <label class="title">Tanggal Penilaian Kandidat</label>
+                                                                                <label class="title">Tanggal Klarifikasi dan Negosiasi</label>
                                                                                 <input id="next-klarifikasi-dari" type="text" class="form-control dateJadwal">
                                                                             </div>
                                                                         </div>
