--- a/Reston.EProc.Runner.IIS/View/monitoring-selection.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-selection.html
@@ -471,6 +471,7 @@
                     "data": function (d) {
                         d.search = $("#txtcari").val();
                         d.status = "";
+                        d.length = 10;
                     },
                     "error": function (jqXHR, textStatus, errorThrown) {
                     }
