PO, SPK, Approval

--- a/Reston.EProc.Runner.IIS/View/monitoring-selection.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-selection.html
@@ -147,7 +147,7 @@
                                     <div class="col-md-12">
                                         <div class="nav-tabs-custom">
                                             <ul class="nav nav-tabs">
-                                                <li class="active"><a href="#seleksi" data-toggle="tab">Seleksi</a></li>
+                                                <li class="active"><a href="#seleksi" data-toggle="tab">Semua</a></li>
                                                 <li><a href="#draf" data-toggle="tab">Draf</a></li>
                                                 <li><a href="#sedang_berjalan" data-toggle="tab">Sedang Berjalan</a></li>
                                                 <li><a href="#selesai" data-toggle="tab">Selesai</a></li>
