--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
@@ -81,7 +81,7 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>    <a id="judul-page" href="#">APPROVAL</a></li>
+                            <li>    <a id="judul-page" href="#">Approval</a></li>
                         </ul>
                     </div>
                 </nav>
