--- a/Reston.EProc.Runner.IIS/View/approval.html
+++ b/Reston.EProc.Runner.IIS/View/approval.html
@@ -79,7 +79,7 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>    <a id="judul-page" href="#">LISTS TO DO</a></li>
+                            <li>    <a id="judul-page" href="#">List To Do</a></li>
                         </ul>
                     </div>
                 </nav>
