--- a/MTF_x/Views/Shared/_Layout2.cshtml
+++ b/MTF_x/Views/Shared/_Layout2.cshtml
@@ -76,8 +76,14 @@
                         <li id="menu2"><a href="@Url.Action("FindData","Home")">Cari Pengadaan</a></li>
                         <!--<li><a href="tanya-jawab.html">Tanya Jawab</a></li>-->
                         <li id="menu3"><a href="@Url.Action("Contact","Home")">Kontak Kami</a></li>
+                        @if (!Request.IsAuthenticated){
                         <li id="menu4"><a href="registrasi.html">Registrasi</a></li>
                         <li id="menu5"><a href="#">Login</a></li>
+                        }
+                        @if (Request.IsAuthenticated)
+                        {
+                             <li id="menu4"><a href="Signout">Logout</a></li>
+                        }
                     </ul>
                 </div>
             </div><!--/.container-->
