--- a/MTF_x/Views/Home/DetailData.cshtml
+++ b/MTF_x/Views/Home/DetailData.cshtml
@@ -20,12 +20,12 @@
                                 <div class="tab-pane active" id="pengadaan_barang">
                                 @if (!Request.IsAuthenticated){
                                     <div class="col-md-12" style="margin:20px 0px 20px 0px;">
-                                        <p>Untuk dapat mengikuti pekerjaan ini. Silahkan <a href="http://localhost:49559/registrasi.html" target="_blank" class="text-bold"> Registrasi</a> atau <a href="http://localhost:7348/" target="_blank" class="text-bold"> Login</a> Perusahaan Anda.</p>
+                                        <p>Untuk dapat mengikuti pekerjaan ini. Silahkan <a href="http://localhost:49559/registrasi.html" target="_blank" class="text-bold"> Registrasi</a> atau <a href="Login" target="_blank" class="text-bold"> Login</a> Perusahaan Anda.</p>
                                     </div>
                                 }
                                  @if (Request.IsAuthenticated){
                                     <div class="col-md-12" style="margin:20px 0px 20px 0px;">
-                                        <p>Klik Untuk Mendaftar Pengadaan ini <a href="daftar.html" class="text-bold"> Daftar</a></p>
+                                        <p>Klik Untuk Mendaftar Pengadaan ini <a href="Daftar?id=@Html.DisplayFor(p => p.Id)">Daftar</a></p>
                                     </div>
                                 }
 
