--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
@@ -299,13 +299,14 @@
                                                             <label class="deskripsi jadwal" id="BukaAmplop"</label>
                                                         </div>
                                                         <div class="form-group">
-                                                            <label class="title">Penilaian Kandidat:</label>
-                                                            <label class="deskripsi jadwal" id="penilaian"></label>
-                                                        </div>
-                                                        <div class="form-group">
                                                             <label class="title">Klarifikasi & Negosiasi:</label>
                                                             <label class="deskripsi jadwal" id="Klarifikasi"></label>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="title">Penilaian Kandidat:</label>
+                                                            <label class="deskripsi jadwal" id="penilaian"></label>
+                                                        </div>
+                                                        
                                                         <!-- <div class="form-group">
                                                              <label class="title">Klarifikasi Lanjut</label>
                                                              <label class="deskripsi">22/02/2016</label>
@@ -818,6 +819,18 @@
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-pemenang" class="btn btn-success pull-left next-step" elDari="#next-pemenang-dari" elSampai="#next-pemenang-sampai" disabled="disabled">Save&NextStep</button>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-md-2">
+                                                                            <div class="form-group">
+                                                                                <input type="checkbox" id="tambah-klarifikasi-lanjut" />
+                                                                                <label>Tambah Tahap Klarifikasi Lanjut</label>
+                                                                            </div>
+                                                                        </div>
+                                                                         <div class="col-md-2">
+                                                                            <div class="form-group">
+                                                                                <input type="checkbox" id="tambah-penilaian" />
+                                                                                <label>Tambah Tahap Penilaian</label>
                                                                             </div>
                                                                         </div>
                                                                     </div>
