--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -375,45 +375,39 @@
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label class="title">s/d</label>
-                                            <input id="buka_amplop_sampai" disabled="disabled" name="buka_amplop" nextJadwal="#penilaian" beforeJadwal="#buka_amplop" attr1="sampai" type="text" class="buka_amplop form-control datepicker dateJadwal">
+                                            <input id="buka_amplop_sampai" disabled="disabled" name="buka_amplop"  nextJadwal="#klarifikasi"  beforeJadwal="#buka_amplop" attr1="sampai" type="text" class="buka_amplop form-control datepicker dateJadwal">
+                                        </div>
+                                    </div>                                    
+                                    <div class="row">
+                                        <input type="hidden" class="jadwal" attr1="klarifikasi" attr2="" attr3="" />
+                                        <div class="form-group col-md-4">
+                                            <label class="title">Klarifikasi & Negosiasi:</label>
+                                            <input id="klarifikasi" name="klarifikasi" disabled="disabled" nextJadwal="#klarifikasi_sampai"   beforeJadwal="#buka_amplop_sampai" attr1="dari" type="text" class="klarifikasi form-control datepicker dateJadwal">
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <label class="title">s/d</label>
+                                            <input id="klarifikasi_sampai" disabled="disabled" name="klarifikasi" nextJadwal="#penilaian" beforeJadwal="#klarifikasi" attr1="sampai" type="text" class="klarifikasi form-control datepicker dateJadwal">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <input type="hidden" class="jadwal" attr1="penilaian" attr2="" attr3="" />
                                         <div class="form-group col-md-4">
                                             <label class="title">Penilaian Kandidat:</label>
-                                            <input id="penilaian" disabled="disabled" attr1="dari" nextJadwal="#penilaian_sampai" beforeJadwal="#buka_amplop_sampai" name="penilaian" type="text" class="penilaian form-control datepicker dateJadwal">
+                                            <input id="penilaian" disabled="disabled" attr1="dari" nextJadwal="#penilaian_sampai" beforeJadwal="#klarifikasi_sampai" name="penilaian" type="text" class="penilaian form-control datepicker dateJadwal">
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label class="title">s/d</label>
-                                            <input id="penilaian_sampai" disabled="disabled" name="penilaian" nextJadwal="#klarifikasi" beforeJadwal="#penilaian" attr1="sampai" type="text" class="penilaian form-control datepicker dateJadwal">
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <input type="hidden" class="jadwal" attr1="klarifikasi" attr2="" attr3="" />
-                                        <div class="form-group col-md-4">
-                                            <label class="title">Klarifikasi & Negosiasi:</label>
-                                            <input id="klarifikasi" name="klarifikasi" disabled="disabled" nextJadwal="#klarifikasi_sampai" beforeJadwal="#penilaian_sampai" attr1="dari" type="text" class="klarifikasi form-control datepicker dateJadwal">
-                                        </div>
-                                        <div class="form-group col-md-4">
-                                            <label class="title">s/d</label>
-                                            <input id="klarifikasi_sampai" disabled="disabled" name="klarifikasi" nextJadwal="#penentuan_pemenang" beforeJadwal="#klarifikasi" attr1="sampai" type="text" class="klarifikasi form-control datepicker dateJadwal">
+                                            <input id="penilaian_sampai" disabled="disabled" name="penilaian" nextJadwal="#penentuan_pemenang" beforeJadwal="#penilaian" attr1="sampai" type="text" class="penilaian form-control datepicker dateJadwal">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <input type="hidden" class="jadwal" attr1="penentuan_pemenang" attr2="" attr3="" />
                                         <div class="col-md-4 form-group">
                                             <label class="title">Penentuan Pemenang:</label>
-                                            <input id="penentuan_pemenang" disabled="disabled" name="penentuan_pemenang" nextJadwal="" beforeJadwal="#klarifikasi_sampai" attr1="dari" type="text" class="penentuan_pemenang form-control datepicker dateJadwal">
+                                            <input id="penentuan_pemenang" disabled="disabled" name="penentuan_pemenang" nextJadwal="" beforeJadwal="#penilaian_sampai" attr1="dari" type="text" class="penentuan_pemenang form-control datepicker dateJadwal">
                                         </div>
                                     </div>
-                                    <!-- kalender
-                                    <div class="col-md-8">
-                                        <div style="margin:10px;">
-                                            <div id="calendar"></div>
-                                        </div>
-                                    </div>
-                                    -->
+
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class=" panel-header-white">
