--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -306,13 +306,14 @@
                                                             <label class="deskripsi jadwal" id="BukaAmplop"</label>
                                                         </div>
                                                         <div class="form-group">
-                                                            <label class="title">Penilaian Kandidat:</label>
-                                                            <label class="deskripsi jadwal" id="penilaian"></label>
-                                                        </div>
-                                                        <div class="form-group">
                                                             <label class="title">Klarifikasi & Negosiasi:</label>
                                                             <label class="deskripsi jadwal" id="Klarifikasi"></label>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="title">Penilaian Kandidat:</label>
+                                                            <label class="deskripsi jadwal" id="penilaian"></label>
+                                                        </div>
+                                                        
                                                         <!-- <div class="form-group">
                                                              <label class="title">Klarifikasi Lanjut</label>
                                                              <label class="deskripsi">22/02/2016</label>
@@ -562,6 +563,7 @@
                                                             </div>
                                                             <div id="collapseThree" class="panel-collapse collapse">
                                                                 <div class="box-body">
+                                                                    <!--
                                                                     <div class="row">
                                                                         <div class="col-md-3">
                                                                             <div class="form-group">
@@ -584,6 +586,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
+                                                                    -->
                                                                     <div class="row">
                                                                         <div class="col-md-8">
                                                                             <div class="form-group">
@@ -772,12 +775,25 @@
                                                                                 <button id="btn-next-klarfikasi-lanjut" class="btn btn-success pull-left next-step" attrStatus="KLARIFIKASI" elDari="#next-klarfikasi-lanjut-dari" elSampai="#next-klarfikasi-lanjut-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
+                                                                        <div class="col-md-2">
+                                                                            <div class="form-group">
+                                                                                <input type="checkbox" id="tambah-klarifikasi-lanjut" />
+                                                                                <label>Tambah Tahap Klarifikasi Lanjut</label>
+                                                                            </div>
+                                                                        </div>
+                                                                         <div class="col-md-2">
+                                                                            <div class="form-group">
+                                                                                <input type="checkbox" id="tambah-penilaian" />
+                                                                                <label>Tambah Tahap Penilaian</label>
+                                                                            </div>
+                                                                        </div>
                                                                     </div>
+                                                                    
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <!--klarifikasi & negoisasi lanjutan--> 
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary panel-klarifikasi-lanjut" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-klarifikasi-lanjutan" data-parent="#accordion" href="#detail-klarifikasi-lanjutan">
@@ -896,7 +912,7 @@
                                                             </div>
                                                         </div>
                                                         <!--penilaian--> 
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary panel-penilaian" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-penilaian-kandidat" data-parent="#accordion" href="#collapse4">
@@ -1055,18 +1071,41 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
+                                                                     <div class="row bingkai-persetujuan-terkait">
+                                                                         <div class="col-md-10">
+                                                                             <div class="row">
+                                                                                <div class="col-md-4">
+                                                                                    <div class="form-group">
+                                                                                        <button class="btn btn-success pull-left add-user-terkait">Pilih User Terkait</button>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                             <br />
+                                                                             <div class="row">
+                                                                                <div class="col-md-4">
+                                                                                    <div class="form-group">
+                                                                                        <label>User Terkait </label>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                             <div class="row list-user-terkait">
+
+                                                                            </div>
+                                                                         </div>
+                                                                     </div>
                                                                     <div class="row bingkai-pengajuan-pemenang" style="display:none">
                                                                           <div class="col-md-10">
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
-                                                                                        <div class="form-group">
-                                                                                            <button class="btn btn-success pull-left ajukan-pemenang">Ajukan Pemenang</button>
-                                                                                            <label class="status-persetujuan-pemenang"></label>
-                                                                                        </div>
+                                                                                    <div class="form-group">
+                                                                                        <button class="btn btn-success pull-left ajukan-pemenang">Ajukan Pemenang</button>
+                                                                                        <label class="status-persetujuan-pemenang"></label>
                                                                                     </div>
                                                                                 </div>
+                                                                            </div>
                                                                          </div>
                                                                      </div>
+                                                                    
                                                                     <div class="row bingkai-spk">
                                                                         <div class="col-md-10">
                                                                             <div class="row">
@@ -1426,7 +1465,43 @@
             Dengan Mengunggah Berkas Bearti akan berlanjut ke state berikutnya?
         </p>
     </div>
+    
+    
+     <!-- Modal -->
+        <div class="modal" id="users_modal" role="dialog"  aria-hidden="true">
+            <input type="hidden" id="next-userid"/>
+              <input type="hidden" id="note_user"/>
+             <input type="hidden" id="Hidden1"/>
+            
+          <div class="modal-dialog">
+	        <div class="modal-content">
+	          <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="TitleKonfirmasi">User List</h4>
+	          </div>
+	          <div class="modal-body">
+		        <table class="table table-bordered table-striped table-responsive" id="user_table" style="margin-top:20px; ">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>User</th>
+                            <th>Jabatan</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+	          </div>
+	          <div class="modal-footer">
+                  <a class="btn btn-default adduserterkai" data-toggle="tooltip" title="Pilih" >Pilih </a>	
+		        <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
+	          </div>
+	        </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    
     <!-- jQuery 2.1.4 -->
+
 
     <script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
     <!-- Bootstrap 3.3.5 -->
