--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
@@ -140,7 +140,7 @@
                                                     <th>Status</th>
                                                     <th>Approver Sebelumnya</th>
                                                     <th>Approver Berikutnya</th>
-                                                    <th>Note</th>
+                                                    <th>Disposisi</th>
                                                     <th></th>  
                                                 </tr>
                                             </thead>
