--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
@@ -138,7 +138,7 @@
                                                     <th>HPS</th>
                                                     <th>Klasifikasi</th>
                                                     <th>Status</th>
-                                                    <th>Note</th>
+                                                    <th>Disposisi</th>
                                                     <th></th>
                                                 </tr>
                                             </thead>
