--- a/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
@@ -142,7 +142,7 @@
                                                     <th class="tengah">Status</th>
                                                     <th>Approver Sebelumnya</th>
                                                     <th>Approver Berikutnya</th>
-                                                    <th class="tengah">Note</th>
+                                                    <th class="tengah">Disposisi</th>
                                                     <th></th>
                                                 </tr>
                                             </thead>
