--- a/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-sudah-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-sudah-disetujui.html
@@ -140,7 +140,7 @@
                                                     <th class="tengah">Pemenang</th>
                                                     <th class="tengah">Klasifikasi</th>
                                                     <th class="tengah">Status</th>
-                                                    <th class="tengah">Note</th>
+                                                    <th class="tengah">Disposisi</th>
                                                     <th class="tengah"></th>
                                                 </tr>
                                             </thead>
