--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -156,9 +156,9 @@
                                     <div class="form-group col-md-4">
                                         <label class="title">No. PO:</label>
                                         <input type="text" id="no-po" class="form-control" disabled>
-                                        <span class="input-group-btn">
+                                     <!--   <span class="input-group-btn">
                                             <button class="btn btn-primary ge-no-po" type="button">Generate No PO</button>
-                                        </span>
+                                        </span>-->
                                     </div>
                                 </div>
                                 <div class="row">
