--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -162,7 +162,7 @@
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Proyek Monitoring</td>
-                                                <td class="tengah text-bold"><a href="monitoring-selection.html" id="monitor-selection"></a></td>
+                                                <td class="tengah text-bold"><a href="sistem-monitoring.html" id="monitor-selection"></a></td>
 
                                             </tr>
                                         </table>
@@ -217,7 +217,7 @@
                     <div class="col-sm-12">
                         <div class="box box-white">
                             <div class="box-header with-border">
-                                <h3 class="box-title">Persons in Charges</h3>
+                                <h3 class="box-title">Person in Charges</h3>
                                 <div class="box-tools pull-right">
 
                                 </div>
