--- a/Reston.EProc.Runner.IIS/View/monitoring-selection.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-selection.html
@@ -161,7 +161,7 @@
                                                                 <td class="tengah text-bold">No. Pengadaan</td>
                                                                 <td class="tengah text-bold">No. SPK</td>
                                                                 <td class="tengah text-bold">Nama Proyek</td>
-                                                                <td class="tengah text-bold">Vendor Pemenang</td>
+                                                                <td class="tengah text-bold">Pelaksana</td>
                                                                 <td class="tengah text-bold">Klasifikasi</td>
                                                                 <td class="tengah text-bold">Tanggal</td>
                                                                 <td class="tengah text-bold">Nilai Kontrak</td>
@@ -504,7 +504,7 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return ' <a href="pengadaan-terbuka-detail.html#' + row.Id + '" id="" class="btn btn-sm btn-success "> Detail </a> ';
+                            return ' <a href="pengadaan-terbuka-detail.html#' + row.Id + '" id="" class="btn btn-sm btn-success "> Review </a> ';
                         },
                         "targets": 8,
                         "orderable": false
@@ -561,7 +561,7 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return ' <a href="sistem-monitoring-detail.html?Id=' + row.Id + '" id="" class="btn btn-sm btn-success "> Detail </a> ';
+                            return ' <a href="sistem-monitoring-detail.html?Id=' + row.Id + '" id="" class="btn btn-sm btn-success "> Review </a> ';
                         },
                         "targets": 8,
                         "orderable": false
