--- a/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
+++ b/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
@@ -147,26 +147,19 @@
                                             </form>
                                         </div>
                                         <div class="col-md-6">
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Dalam Pelaksanaan</h4></label>
+                                            <div class="form-group">
+                                                <label class="col-sm-6 control-label" style="font-weight:500; text-align:left;">Total Proyek Dalam Pelaksanaan</label>
+                                                <label class="col-sm-2 control-label" name="dalam-pelaksanaan" style="color:blue;"></label><div class="clearfix"></div>
                                             </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:blue;" name="dalam-pelaksanaan"></h4></label><div class="clearfix"></div>
+                                            <div class="form-group">
+                                                <label class="col-sm-6 control-label" style="font-weight:500; text-align:left;">Total Proyek Lewat Waktu Pelaksanaan</label>
+                                                <label class="col-sm-2 control-label" name="lewat-waktu" style="color:red;"></label><div class="clearfix"></div>
                                             </div>
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Lewat Waktu Pelaksanaan</h4></label>
+                                            <div class="form-group">
+                                                <label class="col-sm-6 control-label" style="font-weight:500; text-align:left;">Total Proyek Mendekati Waktu Pelaksanaan</label>
+                                                <label class="col-sm-2 control-label" name="mendekati-waktu" style="color:orange;"></label><div class="clearfix"></div>
                                             </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:red;" name="lewat-waktu">5</h4></label><div class="clearfix"></div>
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Mendekati Waktu Pelaksanaan</h4></label>
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:orange;" name="mendekati-waktu">4</h4></label>
-                                            </div>
-                                                <div class="clearfix"></div>
-                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="row ">
