--- a/Reston.EProc.Runner.IIS/Report/po.rdlc
+++ b/Reston.EProc.Runner.IIS/Report/po.rdlc
@@ -146,7 +146,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox9</rd:DefaultName>
@@ -178,7 +180,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox11</rd:DefaultName>
@@ -383,7 +387,9 @@
                               <Style />
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox10</rd:DefaultName>
@@ -392,6 +398,7 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -882,7 +889,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>2.</Value>
+                <Value>1.</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -976,7 +983,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>3.</Value>
+                <Value>2.</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -1114,7 +1121,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox53</rd:DefaultName>
-        <Top>5.98958in</Top>
+        <Top>5.86458in</Top>
         <Left>0.92931in</Left>
         <Height>0.25in</Height>
         <Width>5.45264in</Width>
@@ -1146,7 +1153,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox53</rd:DefaultName>
-        <Top>5.98958in</Top>
+        <Top>5.86458in</Top>
         <Left>6.39584in</Left>
         <Height>0.25in</Height>
         <Width>2.35417in</Width>
@@ -1276,7 +1283,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>4.</Value>
+                <Value>3.</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -1480,7 +1487,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>5.</Value>
+                <Value>4.</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -1640,7 +1647,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>6.</Value>
+                <Value>5.</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
