--- a/Reston.EProc.Runner.IIS/View/create-pks.html
+++ b/Reston.EProc.Runner.IIS/View/create-pks.html
@@ -83,6 +83,7 @@
                             <li><a  title="Simpan" href="#" class="Simpan" style="display:none"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Simpan</a></li>
                             <li><a  title="Ajukan" href="#" class="ajukan" style="display:none">Ajukan</a></li>
                             <li><a title="Pending" href="#" class="pending" style="display:none">Pending</a></li>
+                            <li><a title="Off Pending" href="#" class="off-pending" style="display:none">Off Pending</a></li>
                             <li><a  title="Hapus" href="#" class="Hapus" style="display:none"><i class="fa fa-fw fa-trash " style="font-size:20px;"></i>Hapus</a></li>
                             <li><a  title="Edit" href="#" class="Edit" style="display:none"><i class="fa fa-fw fa-pencil " style="font-size:20px;"></i>Edit</a></li>
                         </ul>
@@ -287,7 +288,30 @@
             <!-- Tab panes -->
             <div class="box box-white">
                 <div class="box-header with-border">
-                    <h3 class="box-title text-blue-mtf box-riwayat"><a href="riwayat-pengadaan.html">Riwayat</a></h3>
+                    <h3 class="box-title text-blue-mtf box-riwayat"><a href="riwayat-pengadaan.html">Kirim Catatan</a></h3>
+                </div>
+                <div class="box-body" >
+                     <div class="row" >
+                        <div class="col-md-12">
+                            <form class="form-horizontal">
+                                 <div class="form-group">
+                                    <div class="col-sm-12">
+                                        <textarea class="form-control" > </textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-12">
+                                       <button type="button" class="btn btn-default" >Kirim</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box box-white">
+                <div class="box-header with-border">
+                    <h3 class="box-title text-blue-mtf box-riwayat"><a href="riwayat-pengadaan.html">Catatan</a></h3>
                 </div>
                 <div class="box-body" >
                     <ul class="products-list list-catatan">
