--- a/Reston.EProc.Runner.IIS/View/create-pks.html
+++ b/Reston.EProc.Runner.IIS/View/create-pks.html
@@ -83,7 +83,7 @@
                             <li><a  title="Simpan" href="#" class="Simpan" style="display:none"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Simpan</a></li>
                             <li><a  title="Ajukan" href="#" class="ajukan" style="display:none">Ajukan</a></li>
                             <li><a title="Pending" href="#" class="pending" style="display:none">Pending</a></li>
-                            <li><a title="Off Pending" href="#" class="off-pending" style="display:none">Off Pending</a></li>
+                            <li><a title="Setujui" href="#" class="setujui" style="display:none">Setujui</a></li>
                             <li><a  title="Hapus" href="#" class="Hapus" style="display:none"><i class="fa fa-fw fa-trash " style="font-size:20px;"></i>Hapus</a></li>
                             <li><a  title="Edit" href="#" class="Edit" style="display:none"><i class="fa fa-fw fa-pencil " style="font-size:20px;"></i>Edit</a></li>
                         </ul>
@@ -247,20 +247,22 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-10">
-                                                <div class=" panel-header-white">
-                                                    <span class="title-header" id="Span1">Dokumen PKS Assign</span>
+                                        <div id="dok-assign" style="display:none">
+                                            <div class="row">
+                                                <div class="col-md-10">
+                                                    <div class=" panel-header-white">
+                                                        <span class="title-header" id="Span1">Dokumen PKS Assign</span>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="row">
-                                             <div class="col-md-8">
-                                                <div class="row">
-                                                    <div class="col-md-12">
-                                                        <div class="form-group">
-                                                            <label class="title">Unggah PKS Assign</label>
-                                                            <div id="AssignedPks" attr="PKS" action="/api/Pks/UploadFile?tipe=AssignedPks" class="dropzone"></div>
+                                            <div class="row">
+                                                 <div class="col-md-8">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <div class="form-group">
+                                                                <label class="title">Unggah PKS Assign</label>
+                                                                <div id="AssignedPks" attr="PKS" action="/api/Pks/UploadFile?tipe=AssignedPks" class="dropzone"></div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -296,12 +298,12 @@
                             <form class="form-horizontal">
                                  <div class="form-group">
                                     <div class="col-sm-12">
-                                        <textarea class="form-control" > </textarea>
+                                        <textarea id="catatan" class="form-control" > </textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-12">
-                                       <button type="button" class="btn btn-default" >Kirim</button>
+                                       <button  type="button" class="btn btn-default kirim-catatan" >Kirim</button>
                                     </div>
                                 </div>
                             </form>
@@ -420,6 +422,33 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="pending-pks" class="btn btn-default">Ok</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <div class="modal" id="KonfirmasiSetujui" role="dialog" FileId="" attr1="" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Konfirmasi Setujui PKS</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row" >
+                        <input type="hidden" id="idPksSetuju" />
+                        <div class="col-md-12">
+                             <label class=" control-label">No PKS</label>
+                             <input type="text" id="no-pks" class="form-control"/>
+                        </div>
+                        <div class="col-md-12">
+                             <label class=" control-label">Catatan</label>
+                             <textarea id="note-setujui" class="form-control "></textarea>  
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="setujui-pks" class="btn btn-default">Ok</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div><!-- /.modal-content -->
